--- a/.editorconfig
+++ b/.editorconfig
@@ -8,11 +8,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 100
 
-[*.java]
-ij_java_align_multiline_chained_methods = true
-ij_java_align_multiline_extends_list = true
-
-[*.yml]
+[{*.yml,*.yaml}]
 indent_size = 2
 
 [*.md]
