Add github workflow for building and pushing docker images (#4)
* Add github workflow file for docker image builds and pushes

* Rename gradle.yml workflow to check-pull-request.yml

* Update Dockerfile to use multistage build

* Update permissions on build-image.sh

* Remove extra `cd` from build-image.sh

* Add build stage to Dockerfile

* Remove on pr trigger from build-docker-image.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - "5432:5432"
 
   backend:
-    image: medfast:latest
+    build: .
+    image: healflowdev/medfast:latest
     depends_on:
       - postgresql
     environment:
