MED-246: Fix according to comments

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,10 @@ spring:
             required: true
             enable: true
 
+  # Service configuration (dev/prod)
+  profiles:
+    active: prod
+
 # JWT
 token:
   timeout:
