MED-250: Integrate the ELK stack (#16)
* MED-250: Add ELK stack support

* MED-250: Add logging statements around the app

* MED-250: Adjust app to running without docker

* MED-250: Add logging docs in README.md

* MED-250: Remove comments from docker-compose.yml

* MED-250: Update README.md

* MED-250: Update user data logging to id instead of email

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 name: medfast
 services:
+
   postgresql:
     image: postgres:latest
     environment:
@@ -23,3 +24,38 @@ services:
       MAIL_PASSWORD: "pyne podv rskn cqof"
     ports:
       - "8080:8080"
+    links:
+      - logstash
+
+  elasticsearch:
+    image: elasticsearch:7.17.23
+    volumes:
+      - ./config/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      - "ES_JAVA_OPTS=-Xmx256m -Xms256m"
+
+  logstash:
+    image: logstash:7.17.23
+    command: -f /etc/logstash/conf.d/
+    volumes:
+      - ./config/logstash/:/etc/logstash/conf.d/
+    ports:
+      - "9999:9999"
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    depends_on:
+      - elasticsearch
+
+  kibana:
+    image: kibana:7.17.23
+    volumes:
+      - ./config/kibana/:/usr/share/kibana/config/
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    command: >
+      sh -c "/usr/share/kibana/config/setup-kibana.sh"
