MED-251: Integrate testcontainers (#22)
* MED-251: add unit tests

* MED-251: fix UsernameNotFoundException catch added to OneTimePasswordControlle

* MED-251: fix separated UserAlreadyExistsException catch added

* MED-251: add integration tests for controllers

* MED-251: fix unnecessary check removed

* MED-251: fix extracting claims by adding try-catch to extract expired claims

* MED-251: add integrity test for MedfastApplication and unit tests

* MED-251: fix kibana starting proccess

Deleted and recreated setup kibana script
for Windows purposes to awoid permission error.
Added waiting for kibana initialization to setup script.

* MED-251: Remove database service from run-tests.yml

* MED-251: Remove logs directory and add it to .gitignore

* MED-251: Add testcontainers support

* MED-251: Fix checkstyle errors

* MED-251: Update log file names in log4j2.xml

* MED-251: Remove logging to rolling files in log4j2.xml

* MED-251: Delete previously written integration tests and add new one as example

* MED-251: Remove extra code in AuthControllerTests.java

* MED-251: Return deleted tests

---------

Co-authored-by: Uladzislau Lukashevich <lukashevichuladzislau@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: medfast
 services:
 
   postgresql:
-    image: postgres:latest
+    image: postgres:16
     environment:
       POSTGRES_DB: medfast
       POSTGRES_USER: user
@@ -58,4 +58,4 @@ services:
     depends_on:
       - elasticsearch
     command: >
-      sh -c "/usr/share/kibana/config/setup-kibana.sh"
+      sh -c "/usr/share/kibana/config/setup.sh"
